feat: material services, repositories and tests
