# backend/src/modules/materials/dtos/ICreateOrUpdateMaterialDTO.ts
@@ -1,0 +1,5 @@
+export default interface ICreateOrUpdateMaterialDTO {
+  sub_module_id: string;
+  order: number;
+  image_url: string;
+}
