# backend/src/modules/sub-modules/dtos/ICreateOrUpdateSubModuleDTO.ts
@@ -2,5 +2,4 @@ export default interface ICreateOrUpdateSubModuleDTO {
   module_id: string;
   name: string;
   order: number;
-  content_url: string;
 }
