# backend/src/modules/sub-modules/dtos/ISubModuleRequestDTO.ts
@@ -1,0 +1,9 @@
+export default interface ISubModuleRequestDTO {
+  module_id: string;
+  name: string;
+  order: number;
+  content: {
+    order: number;
+    image_url: string;
+  }[];
+}
