# backend/src/modules/sub-modules/dtos/ISubModuleResponseDTO.ts
@@ -1,0 +1,11 @@
+export default interface ISubModuleResponseDTO {
+  id: string;
+  module_id: string;
+  name: string;
+  order: number;
+  content: {
+    id: string;
+    order: number;
+    image_url: string;
+  }[];
+}
